# medcontrol

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: medicamentos.json
medcontrol/: __init__.py  app.py
tests/: test_app.py  test_integracao.py
