[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medcontrol"
version = "1.1.0"
description = "Controle de medicamentos para idosos via CLI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "João Gabriel dos Santos Felipe", email = "gabes.santtoss@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.scripts]
medcontrol = "medcontrol.app:run"

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
